application/static/application/main.css
body > .container {
    padding-top: 55px;
}

.navbar-right {
    margin-right: 10px;
}

.label-required::after {
    content: ' *';
    color: red;
}

/* For footer */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 80px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

.container {
  width: auto;
}
.container .text-muted {
  margin: 20px 0;
}

